# voxpop

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  Makefile  build-images.sh  build.sh  dev.sh  docker-compose.production.yml  docker-compose.stack.yml  docker-compose.yml  docker-stack.yml
backend/: Dockerfile  Dockerfile.prod  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  seeds.py
backend/apps/accounts/: admin.py
backend/apps/accounts/api/: urls.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_user_force_password_change.py
backend/apps/accounts/models/: user.py
backend/apps/campaigns/: apps.py  models.py  tasks.py
backend/apps/campaigns/api/: __init__.py  filters.py  serializers.py  urls.py  views.py
backend/apps/campaigns/migrations/: 0001_initial.py  0002_initial.py  0003_campaignitem_alter_campaignrecipient_unique_together_and_more.py  0004_campaign_message_template.py
backend/apps/campaigns/services/: campaign_service.py
backend/apps/core/: models.py
backend/apps/dashboard/api/: urls.py
backend/apps/dashboard/migrations/: 0001_initial.py
backend/apps/dashboard/models/: __init__.py  metrics.py
backend/apps/dashboard/tasks/: __init__.py  metrics_tasks.py
backend/apps/messaging/: apps.py
backend/apps/messaging/api/: __init__.py  urls.py
backend/apps/messaging/migrations/: 0001_initial.py  0002_message_template_signature.py  0003_remove_message_template_signature.py
backend/apps/messaging/models/: __init__.py  message.py  template.py
backend/apps/messaging/tasks/: __init__.py  message_tasks.py
backend/apps/supporters/: apps.py
backend/apps/supporters/api/: __init__.py  filters.py  urls.py
backend/apps/supporters/migrations/: 0001_initial.py  0002_add_system_tags_fields.py  0003_create_system_tags.py  0004_add_first_last_name.py
backend/apps/supporters/models/: __init__.py  import_job.py  segment.py  supporter.py  tag.py
backend/apps/teams/: apps.py  models.py  services.py
backend/apps/tenants/: admin.py  middleware.py
backend/apps/whatsapp/: apps.py  tasks.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  urls_public.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py  test.py
backend/core/: __init__.py  exceptions.py  models.py  pagination.py  permissions.py  utils.py
backend/requirements/: base.txt  development.txt  production.txt
(+158 files in other folders)
