[project]
name = "voxpop"
version = "0.1.0"
description = "SaaS de gestão de campanhas políticas com disparo de mensagens via WhatsApp"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "VoxPop Team"}
]

dependencies = [
    # Django
    "Django>=5.0,<6.0",
    "djangorestframework>=3.14,<4.0",
    "django-cors-headers>=4.3,<5.0",
    "django-filter>=24.0,<25.0",

    # Multi-tenancy
    "django-tenants>=3.6,<4.0",
    "tenant-schemas-celery>=4.0,<5.0",

    # Celery
    "celery>=5.3,<6.0",
    "redis>=5.0,<6.0",
    "django-celery-beat>=2.6,<3.0",

    # Auth
    "djangorestframework-simplejwt>=5.3,<6.0",

    # HTTP Client
    "httpx>=0.25,<1.0",

    # Database
    "psycopg[binary]>=3.1,<4.0",

    # Utils
    "python-decouple>=3.8,<4.0",
    "structlog>=24.0,<25.0",

    # Monitoring
    "sentry-sdk>=1.40,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.7,<5.0",
    "pytest-cov>=4.1,<5.0",
    "pytest-asyncio>=0.23,<1.0",
    "factory-boy>=3.3,<4.0",
    "faker>=22.0,<23.0",
    "ruff>=0.1,<1.0",
    "mypy>=1.8,<2.0",
    "django-stubs>=4.2,<5.0",
    "djangorestframework-stubs>=3.14,<4.0",
    "pre-commit>=3.6,<4.0",
    "ipython>=8.0,<9.0",
    "django-debug-toolbar>=4.2,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voxpop"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "DJ",   # flake8-django
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "core", "config"]

[tool.mypy]
python_version = "3.11"
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "django_tenants.*",
    "tenant_schemas_celery.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
